# home_work_27

./: db.sqlite3  pyproject.toml
ads/: models.py  views.py
ads/migrations/: 0001_initial.py
data/: ads.json  csv_to_json.py
home_work_27/: settings.py  urls.py
