[tool.poetry]
name = "home-work-27"
version = "0.1.0"
description = ""
authors = ["KHAGE"]
readme = "README.md"
packages = [{include = "home_work_27"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
